--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
   </HEAD>
   <BODY>
     <H1>jmlee's Homepage</H1>
-    <a href="hi.html">Hi</a><br>
-    <a href="my/hello.html">Hello</a><br>
-    <a href="chapter1.html">chapter 1</a><br>
-    <a href="chapter2.html">chapter 2</a><br>
-    <a href="chapter3.html">chapter 3</a><br>
-    <a href="chapter4.html">chapter 4</a><br>
-    <a href="chapter5.html">chapter 5</a><br>
+    <a href="hi.html">Hello!</a><br>
+    <a href="chapter1.html">chapter 1 정리</a><br>
+    <a href="chapter2.html">chapter 2 정리</a><br>
+    <a href="chapter3.html">chapter 3 정리</a><br>
+    <a href="chapter4.html">chapter 4 정리</a><br>
+    <a href="chapter5.html">chapter 5 정리</a><br>
   </BODY>
 </HTML>
