--- a/hi.html
+++ b/hi.html
@@ -49,13 +49,11 @@
 <body>
 
   <div class="search-container">
-    <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-      <input class="mdl-textfield__input" type="text" id="search" placeholder="Search">
-      <label class="mdl-textfield__label" for="search">Search</label>
-    </div>
+    <header>
+      <input type="text" autocomplete="off" class="search-box" placeholder="Search">
+    </header>
   </div>
   
-
   <div class="container">
     <div class="welcome-message">Hello My name is jmlee</div>
     <div class="date-temp" id="date-temp"></div>
