--- a/hi.html
+++ b/hi.html
@@ -36,6 +36,32 @@
       width: 300px;
     }
 
+    .search-container input {
+      font-size: 17px;
+      font-weight: 300;
+      transition: 0.2s ease-out;
+      width: 100%;
+      max-width: 280px;
+      padding: 10px 15px;
+      border: none;
+      outline: none;
+      background-color: #ffffff73;
+      border-radius: 16px 0px 16px 0px;
+      font-family: 'Courier New', Courier, monospace;
+      color:#4b4040fdfont-size: 17px;
+      font-weight: 300;
+      transition: 0.2s ease-out;
+      width: 100%;
+      max-width: 280px;
+      padding: 10px 15px;
+      border: none;
+      outline: none;
+      background-color: #ffffff73;
+      border-radius: 16px 0px 16px 0px;
+      font-family: 'Courier New', Courier, monospace;
+      color:#4b4040fd
+    }
+
     .welcome-message {
       font-size: 2em;
       margin-bottom: 20px;
