--- a/hi.html
+++ b/hi.html
@@ -48,7 +48,7 @@
       background-color: #ffffff73;
       border-radius: 16px 0px 16px 0px;
       font-family: 'Courier New', Courier, monospace;
-      color:4b4040fd
+      color: #1F1F1F;
       font-size: 17px;
       font-weight: 300;
       transition: 0.2s ease-out;
