--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
     <a href="chapter3.html">chapter 3 정리</a><br>
     <a href="chapter4.html">chapter 4 정리</a><br>
     <a href="chapter5.html">chapter 5 정리</a><br>
+    <a href="chapter6.html">chapter 6 정리</a><br>
+    <a href="chapter7.html">chapter 7 정리</a><br>
+    <a href="chapter8.html">chapter 8 정리</a><br>
+    <a href="chapter9.html">chapter 9 정리</a><br>
+    <a href="chapter10.html">chapter 10 정리</a><br>
+    <a href="chapter12.html">chapter 12 정리</a><br>
+    <a href="chapter13.html">chapter 13 정리</a><br>
+    <a href="chapter14.html">chapter 14 정리</a><br>
+    <a href="chapter17.html">chapter 17 정리</a><br>
+    <a href="chapter18.html">chapter 18 정리</a><br>
     <a href="project.html">팀프로젝트</a><br>
   </BODY>
 </HTML>
