--- a/index.html
+++ b/index.html
@@ -5,21 +5,18 @@
   <BODY>
     <H1>jmlee's Homepage</H1>
     <a href="hi.html">Hello!</a><br>
-    <a href="chapter1.html">chapter 1 정리</a><br>
-    <a href="chapter2.html">chapter 2 정리</a><br>
-    <a href="chapter3.html">chapter 3 정리</a><br>
-    <a href="chapter4.html">chapter 4 정리</a><br>
-    <a href="chapter5.html">chapter 5 정리</a><br>
-    <a href="chapter6.html">chapter 6 정리</a><br>
-    <a href="chapter7.html">chapter 7 정리</a><br>
-    <a href="chapter8.html">chapter 8 정리</a><br>
-    <a href="chapter9.html">chapter 9 정리</a><br>
-    <a href="chapter10.html">chapter 10 정리</a><br>
-    <a href="chapter12.html">chapter 12 정리</a><br>
-    <a href="chapter13.html">chapter 13 정리</a><br>
-    <a href="chapter14.html">chapter 14 정리</a><br>
-    <a href="chapter17.html">chapter 17 정리</a><br>
-    <a href="chapter18.html">chapter 18 정리</a><br>
+    <a href="chapter1.html">1주차 정리</a><br>
+    <a href="chapter2.html">2주차 정리</a><br>
+    <a href="chapter3.html">3주차 정리</a><br>
+    <a href="chapter4.html">4주차 정리</a><br>
+    <a href="chapter5.html">5주차 정리</a><br>
+    <a href="chapter6.html">6주차 정리</a><br>
+    <a href="chapter7.html">7주차 정리</a><br>
+    <a href="chapter9.html">9주차 정리</a><br>
+    <a href="chapter10.html">10주차 정리</a><br>
+    <a href="chapter12.html">12주차 정리</a><br>
+    <a href="chapter13.html">13주차 정리</a><br>
+    <a href="chapter14.html">14주차 정리</a><br>
     <a href="project.html">팀프로젝트</a><br>
   </BODY>
 </HTML>
